--- a/JobBoard/Views/Openings/Index.cshtml
+++ b/JobBoard/Views/Openings/Index.cshtml
@@ -1,12 +1,12 @@
-@using TripList.Models;
+@using JobList.Models;
 
 <h1>Packing List</h1>
 @if (Model.Count == 0)
 {
-  <p>There are no items in the list.</p>
+  <p>There are no openings in the list.</p>
 }
 <ul>
-  @foreach (Item item in Model)
+  @foreach (Opening opening in Model)
   {
     @if (@item.Packed)
     {
