setup environment to pass first test.
Co-authored by: Ben Dunham <bendunhampdx@gmail.com>

--- a/JobBoard/Views/Openings/Show.cshtml
+++ b/JobBoard/Views/Openings/Show.cshtml
@@ -1,4 +1,4 @@
-<h1>Packer Tracker Item Details: </h1>
+@* <h1>Packer Tracker Item Details: </h1>
 
 <h2>Item name: @Model.Description</h2>
 <h2>Item price: @Model.Price</h2>
@@ -19,4 +19,4 @@
     </form>
   }
 <a href='/items/new'>Add another item</a>
-<a href='/items'>View all items</a>
+<a href='/items'>View all items</a> *@
