--- a/JobBoard/Views/Home/Index.cshtml
+++ b/JobBoard/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
-<h1>Welcome to the Packer Tracker!</h1>
+@* <h1>Welcome to the Packer Tracker!</h1>
 <a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a>
+<a href='/items'>See list of items</a> *@
