--- a/JobBoard/Views/Openings/Index.cshtml
+++ b/JobBoard/Views/Openings/Index.cshtml
@@ -1,4 +1,4 @@
-@using JobList.Models;
+@* @using JobList.Models;
 
 <h1>Packing List</h1>
 @if (Model.Count == 0)
@@ -30,4 +30,4 @@
 
 <form action="/items/delete" method="post">
   <button type="submit" name="button">Clear All Items</button>
-</form>
+</form> *@
