--- a/JobBoard/Views/Openings/New.cshtml
+++ b/JobBoard/Views/Openings/New.cshtml
@@ -1,4 +1,4 @@
-<form action="/items" method="post">
+@* <form action="/items" method="post">
   <label for="description">Add a new item</label>
   <input id="description" name="description" type="text">
 
@@ -14,4 +14,4 @@
   <label for="weight">Add item weight</label>
   <input id="weight" name="weight" type="text">
   <button type="submit">Submit</button>
-</form>
+</form> *@
