--- a/JobBoard/Views/Home/Index.cshtml
+++ b/JobBoard/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
-@* <h1>Welcome to the Packer Tracker!</h1>
-<a href='/items/new'>Add a new item</a>
-<a href='/items'>See list of items</a> *@
+<h1>Welcome to the Job Board!</h1>
+<a href='/openings'>See list of openings</a>
+<a href='/openings/new'>Add a new opening</a>
