--- a/JobBoard/Views/Openings/Index.cshtml
+++ b/JobBoard/Views/Openings/Index.cshtml
@@ -1,6 +1,6 @@
-@* @using JobList.Models;
+@using JobList.Models;
 
-<h1>Packing List</h1>
+<h1>Current Job Openings</h1>
 @if (Model.Count == 0)
 {
   <p>There are no openings in the list.</p>
@@ -8,26 +8,13 @@
 <ul>
   @foreach (Opening opening in Model)
   {
-    @if (@item.Packed)
-    {
-      <li><a href='/items/@item.Id'>@item.Description</a></li>
-    }
+      <li><a href='/openings/@opening.Id'>@opening.Title</a></li>
   }
 </ul>
 
-<h1>Not yet Packed</h1>
-<ul>
-  @foreach (Item item in Model)
-  {
-    @if (!@item.Packed)
-    {
-      <li><a href='/items/@item.Id'>@item.Description</a></li>
-    }
-  }
-</ul>
 
-<a href="/items/new">Add a new item.</a>
+<a href="/openings/new">Add a new opening.</a>
 
-<form action="/items/delete" method="post">
-  <button type="submit" name="button">Clear All Items</button>
-</form> *@
+<form action="/openings/delete" method="post">
+  <button type="submit" name="button">Clear All Openings</button>
+</form>
